hphp/hack/test/typecheck/shape_key_exists7.php
<?hh

// Too few arguments

function test(): void {
  Shapes::keyExists(shape());
}
